# instrumentation-languages

./: .gitignore  .project  Jenkinsfile  Jenkinsfile-release  README.md  compile-command  cs-conf.xml  example.ial  java-header.sed  kieker-java-templates.xml  kieker-xtend-templates.xml  local-settings.xml  pmdrules.xml  pom.xml  pom.xml.template  provide-results.sh  settings.xml  upload.sftp
KiekerMonitoring/: .classpath  .project
buildLs/: readme.md
de.cau.cs.se.instrumentation.al.handler.pcm/: .project  plugin.xml  pom.xml
de.cau.cs.se.instrumentation.al.sdk/: .project  feature.xml  feature.xml.template  pom.xml  pom.xml.template
de.cau.cs.se.instrumentation.al.tests/: .project  pom.xml  pom.xml.template
de.cau.cs.se.instrumentation.al.ui/: .checkstyle  .project  build.properties  (+3 more)
de.cau.cs.se.kieker.service.testclient/: .autotools  .cproject  .gitignore  .project  AUTHORS  Makefile  Makefile.am  NEWS  README  configure.ac  libtool
de.cau.cs.se.kieker.service.testclient/src/: .gitignore  Makefile  Makefile.am  socket.c  socket.h  testclient.c
de.cau.cs.se.kieker.service.testclient/src/kieker/: .gitignore  Makefile.am  binary_serializer.c  binary_serializer.h  socket.c  socket.h
de.cau.cs.se.kieker.service.testclient/src/kieker/records/: operation_execution_record.c  operation_execution_record.h
kieker4c/libkiekermon/: Makefile  Makefile.am  Makefile.in  kieker.c  kieker_io.c  kieker_lookup.c  kieker_serialize.c  libkiekermon.la  libkiekermon_la-kieker.lo  socket.c  socket.h
kieker4c/libkiekermon/.deps/: libkiekermon_la-kieker.Plo
kieker4c/libkiekermon/.libs/: libkiekermon.la  libkiekermon.lai  libkiekermon.so.0  libkiekermon.so.0.0.0
(+6001 files in other folders)
